--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,9 +23,9 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-go-
 
-      - name: Get dependencies, run test
-        run: |
-          go test ./...
+      #- name: Get dependencies, run test
+       # run: |
+        #  go test ./...
 
       - name: Build
         if: startsWith(github.ref, 'refs/tags/')
